tests/init_state/error_span/structured_ref_obligation_unfulfilled_at_drop_span.err.expected
error: at 6:17: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 6 |                 drop r;
   |                 ^^^^^^
  = note: reference declared here
   |
 2 |             fn f(r: &mut i64) {
   |                  ^^^^^^^^^^^
